添加页面内容

--- a/static/common/lang/lang_en.json
+++ b/static/common/lang/lang_en.json
@@ -6,6 +6,7 @@
     "dataset_attr": "Dataset Attributes",
     "download": "Data Download",
     "download_link": "Click to Download Dataset",
+    "direct_download_link": "Download the dataset directly",
     "videos": "Sample Videos",
     "lang_button": "Language ▼",
     "lang_option_en": "English",
