--- a/static/common/lang/lang_zh.json
+++ b/static/common/lang/lang_zh.json
@@ -6,6 +6,7 @@
     "dataset_attr": "数据集属性",
     "download": "数据下载",
     "download_link": "点击下载数据集",
+    "direct_download_link": "直接下载数据集",
     "videos": "示例视频",
     "lang_button": "语言 ▼",
     "lang_option_en": "英文",
